nambah list di index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
 </head>
 <body>
 	<h3>Halaman Latihan GIT</h3>
-	<p>
-		ini halaman untuk sekedar latihan saja, jadi hjsnhjnxwbxcwlcndwcbk.
-	</p>
+	
+	<ul>
+		<li>Daftar Menu</li>
+		<li>Pecel Lele</li>
+		<li>Mie Ayam Jakarta</li>
+		<li>Bubur Ayam</li>
+		<li>Indomie Rebus + Telor</li>
+		<li>Indomie Goreng + Telor</li>
+		<li>Kol Goreng</li>
+	</ul>
+	
 </body>
 </html>
